EKS cluster committed

--- a/eks/cluster.yaml
+++ b/eks/cluster.yaml
@@ -2,8 +2,8 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: userX-cluster        # TODO - modify userX to be your user number
-  region: us-east-2
+  name: user8-cluster        # TODO - modify userX to be your user number
+  region: us-west-2
   version: "1.33" 
 
 managedNodeGroups:
